# recpie-app

./: .gitignore  app.py  database.py  pyproject.toml  recipe_repository.py  recommender_engine.py  utils.py
recommender_engine/: re_utils.py  recommender_engine.py
schemas/: __init__.py  enums.py  recipe.py
sql/: insert_recipe.sql
static/: app.css  app.js
templates/: index.html
tests/: conftest.py  test_app_routes.py  test_re_utils.py  test_recipe_repository.py  test_recommender_engine.py  test_schemas.py
